--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "astro": "^5.14.5",
+    "astro-embed": "^0.9.1",
     "astro-icon": "^1.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
