--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/react": "^4.1.4",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/solid-js": "^5.1.3",
     "@astrojs/tailwind": "^5.1.4",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
@@ -20,6 +21,7 @@
     "astro-icon": "^1.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "solid-js": "^1.9.10",
     "tailwindcss": "^3.4.17",
     "theme-change": "^2.5.0"
   },
